# pec

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run.lua
source/: CMakeLists.txt  pec.cpp
source/frontend/: CMakeLists.txt  barser.c  barser.cpp  barser.h  flexer.c  flexer.h  flexer.hpp  lexer.l  parser.cpp  parser.hpp  parser.y
source/frontend/meta/: barser.cpp  barser.hpp  barser.y  flexer.cpp  flexer.hpp  flexer.l  location.hh
